# pySigma-backend-trellix-helix

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
sigma/backends/trellixhelix/: __init__.py  trellixhelix.py
sigma/pipelines/trellixhelix/: __init__.py  trellixhelix.py
tests/: test_backend_trellix-helix.py  test_pipelines_trellix-helix.py
tools/: trellix_helix.py
