[tool.poetry]
name = "pySigma-backend-trellix-helix"
version = "0.1.0"
description = "Sigma backend for Trellix Query Language (TQL)"
authors = ["Saw Win Naung <sawwinnnaung@gmail.com>"]
license = "MIT"
repository = "https://github.com/sawwn23/pySigma-backend-trellix-helix"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
