[tool.poetry]
name = "pySigma-backend-helix"
version = "0.1.1"
description = "Sigma backend for Trellix Query Language (TQL)"
authors = ["Saw Win Naung <sawwinnnaung@gmail.com>"]
license = "MIT"
repository = "https://github.com/sawwn23/pySigma-backend-trellix-helix"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
coverage = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
